--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,16 @@
 </style>
 </head>
 <body>
-This website contains materials for students at Emerson College in PB203 and PB692. These basic exercises will help you learn to write HTML, CSS, and XML. They will also help you build a website using GitHub Pages. 
+This website contains materials and articles composed by Joanna Buoniconti.
 <p>
 	<h3>Table of Contents</h3>
+	<h4>CodePen Links</h4>
 <li><a href="https://codepen.io/Joanna-Buoniconti/pen/RwEjJzv">Joanna's First HTML/CSS Exercise</a></li>
 <li><a href="https://codepen.io/Joanna-Buoniconti/pen/yLGjgZe">Joanna's Basic Resume</a></li>
-<li><a href="https://profgamble.github.io/create-a-site.html">Creating a Website Using GitHub Pages</a></li>
+	<h4>Op-Ed Articles</h4>
+<li><a href="https://www.gazettenet.com/Columnist-Joanna-Buoniconti-50158341">Article #1: Learning to Be Content With Me</a></li>
+<li><a href="https://www.gazettenet.com/Columnist-Joanna-Buoniconti-47100514">Article #2: Returning Home</a></li>
 </p>
-If you have any questions, please contact <a href="https://sites.google.com/view/agamble">Professor Alyn Gamble</a> at alyn underscore gamble at emerson dot edu.
+If you have any questions, please contact <a href="https://www.linkedin.com/in/joanna-buoniconti-15850a174/">Joanna Buoniconti</a> at joanna underscore buoniconti at emerson dot edu.
 </body>
 </html>
